# jwshell

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/jwshell/: __init__.py  __main__.py  cli.py  client.py  config.py  prompts.py  render.py  schema.py
tests/: conftest.py  test_cli.py  test_config.py  test_render.py  test_schema.py
